--- a/work/progetto.ipynb
+++ b/work/progetto.ipynb
@@ -223,7 +223,7 @@
     "1. **Lettura del dataset e rimozione delle colonne non presenti nel test set e le colonne season**  \n",
     "   Caricamento dei dati da file ed eliminazione delle features non presenti nel test set e di tutte le colonne season.\n",
     "\n",
-    "2. **Rimozione di colonne e righe con troppi valori mancanti**  \n",
+    "2. **Rimozione delle righe con troppi valori mancanti**  \n",
     "   Rimozione delle righe con una percentuale elevata di dati mancanti.\n",
     "\n",
     "3. **Pulizia delle istanze sporche**  \n",
@@ -238,8 +238,8 @@
     "6. **Split train e test**  \n",
     "   Divisione tra il dataset di training e di test ponendo particolare attenzione a mettere nel test istanze con sii != NaN.\n",
     "\n",
-    "7. **Filling dei missing values nelle X**  \n",
-    "   Riempimento dei valori mancanti nelle variabili indipendenti.\n",
+    "7. **Gestione dei valori mancanti**  \n",
+    "   Riempimento dei valori mancanti.\n",
     "\n",
     "8. **Label Propagation per le y mancanti**  \n",
     "   Stima delle etichette mancanti tramite Label Propagation.\n",
@@ -4147,6 +4147,7 @@
     "- **Basic Demos-Age**\n",
     "- **Physical-Height**\n",
     "- **Preint_EduHx-computerinternet_hoursday**\n",
+    "- **Basic_Demos-Age**\n",
     "\n",
     "Per queste feature, si osserva che valori più alti tendono ad essere associati a un numero maggiore di errori di classificazione, mentre valori più bassi risultano in una classificazione corretta.\n",
     "\n",
