--- a/progetto.ipynb
+++ b/progetto.ipynb
@@ -3908,10 +3908,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "69cf8b84-2ea7-4f28-886b-3f4fb8a1257c",
+   "metadata": {},
+   "source": [
+    "# Analisi dei Modelli\n",
+    "\n",
+    "In conclusione, il modello che ha ottenuto la miglior *accuracy* è la **Random Forest**, probabilmente a causa di una focalizzazione sulle classi 0 e 1. Tuttavia, il modello che ha mostrato la miglior *accuracy bistribuita* è la **Artificial Neural Network (ANN)**.\n",
+    "\n",
+    "L'aumento dell'*accuracy* bilanciata è dovuto all'assegnazione di pesi alle classi, che ha ridotto la tendenza del modello a concentrarsi esclusivamente sulla classe 0, distribuendo meglio le predizioni sulle altre classi, come si può vedere dalla matrice di confusione.\n",
+    "\n",
+    "Durante la fase di *tuning* dei parametri, a causa dei limiti di capacità di calcolo e di tempo, il modello ANN non è stato testato con un numero considerevole di configurazioni e pesi. Pertanto, prolungando il processo di ottimizzazione, potrebbe essere possibile individuare configurazioni migliori e affinare ulteriormente la distribuzione dei pesi, riducendo l'errore complessivo.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5aa1b87e-a9cc-44fd-870e-00759d54214b",
    "metadata": {},
    "source": [
-    "# Analisi dei Risultati  \n",
+    "# Analisi degli errori  \n",
     "\n",
     "Analizziamo il modello ANN, che ha ottenuto i migliori risultati, per individuare eventuali pattern nelle classificazioni corrette ed errate.  \n",
     "Plottiamo le istanze classificate correttamente ed erroneamente per verificare se emergono feature distintive o distribuzioni anomali.\n"
@@ -4050,6 +4064,37 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.007949 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 2333\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2262, number of used features: 23\n",
+      "[LightGBM] [Info] Start training from score -0.474790\n",
+      "[LightGBM] [Info] Start training from score -1.460606\n",
+      "[LightGBM] [Info] Start training from score -1.987432\n",
+      "[LightGBM] [Info] Start training from score -4.728272\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.058763 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 2371\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2263, number of used features: 23\n",
+      "[LightGBM] [Info] Start training from score -0.475943\n",
+      "[LightGBM] [Info] Start training from score -1.459145\n",
+      "[LightGBM] [Info] Start training from score -1.984654\n",
+      "[LightGBM] [Info] Start training from score -4.728714\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.011198 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 2462\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2263, number of used features: 23\n",
+      "[LightGBM] [Info] Start training from score -0.475232\n",
+      "[LightGBM] [Info] Start training from score -1.461048\n",
+      "[LightGBM] [Info] Start training from score -1.984654\n",
+      "[LightGBM] [Info] Start training from score -4.728714\n"
+     ]
     }
    ],
    "source": [
